# small_python_projects

./: .gitignore  README.md  pyproject.toml
bagels/: README.md  bagels.py
birthday_paradox/: README.md  birthdayparadox.py
birthdayparadox/: README.md  birthday_paradox.py
bitmap_message/: README.md
bitmapmessage/: README.md  bitmap_message.py
blackjack/: README.md  black_jack.py
bouncingdvd/: README.md  bouncing_dvd.py
caesarcipher/: README.md  caesar_cipher.py
caesarhacker/: README.md  caesar_hacker.py
calendarmaker/: README.md  calendar_maker.py
carrotinabox/: README.md  carrotinabox.py
chohan/: README.md  chohan.py
