[tool.poetry]
name = "small-python-projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "small_python_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
bext = "*"
pyperclip = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
